--- a/Desktop Hotel/Hotel/Hotel/Hotel.vbproj
+++ b/Desktop Hotel/Hotel/Hotel/Hotel.vbproj
@@ -118,6 +118,12 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Camera.vb" />
+    <Compile Include="Checkout.Designer.vb">
+      <DependentUpon>Checkout.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Checkout.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="HosPDeirosDataSet.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -131,6 +137,7 @@
     <Compile Include="HosPDeirosDataSet1.vb">
       <DependentUpon>HosPDeirosDataSet1.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Item.vb" />
     <Compile Include="Listagem.designer.vb">
       <DependentUpon>Listagem.vb</DependentUpon>
     </Compile>
@@ -192,6 +199,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CadastroUsuario.resx">
       <DependentUpon>CadastroUsuario.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Checkout.resx">
+      <DependentUpon>Checkout.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Listagem.resx">
       <DependentUpon>Listagem.vb</DependentUpon>
