--- a/Desktop Hotel/Hotel/Hotel/Hotel.vbproj
+++ b/Desktop Hotel/Hotel/Hotel/Hotel.vbproj
@@ -143,6 +143,11 @@
     <Compile Include="HosPDeirosDataSet1.vb">
       <DependentUpon>HosPDeirosDataSet1.xsd</DependentUpon>
     </Compile>
+    <Compile Include="HosPDeirosDataSet2.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>HosPDeirosDataSet2.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Item.vb" />
     <Compile Include="ListagemCliente.designer.vb">
       <DependentUpon>ListagemCliente.vb</DependentUpon>
@@ -265,6 +270,17 @@
     </None>
     <None Include="HosPDeirosDataSet1.xss">
       <DependentUpon>HosPDeirosDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="HosPDeirosDataSet2.xsc">
+      <DependentUpon>HosPDeirosDataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="HosPDeirosDataSet2.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>HosPDeirosDataSet2.Designer.vb</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="HosPDeirosDataSet2.xss">
+      <DependentUpon>HosPDeirosDataSet2.xsd</DependentUpon>
     </None>
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
