--- a/Desktop Hotel/Hotel/Hotel/Hotel.vbproj
+++ b/Desktop Hotel/Hotel/Hotel/Hotel.vbproj
@@ -167,6 +167,10 @@
       <DependentUpon>HosPDeirosDataSet3.xsd</DependentUpon>
     </Compile>
     <Compile Include="Item.vb" />
+    <Compile Include="Listagem.Designer.vb" />
+    <Compile Include="Listagem.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="ListagemCliente.designer.vb">
       <DependentUpon>ListagemCliente.vb</DependentUpon>
     </Compile>
@@ -247,6 +251,7 @@
     <EmbeddedResource Include="ListagemFuncionario.resx">
       <DependentUpon>ListagemFuncionario.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Listagem.resx" />
     <EmbeddedResource Include="ListagemCliente.resx">
       <DependentUpon>ListagemCliente.vb</DependentUpon>
     </EmbeddedResource>
